CE-107 remoting: replace fst with apache fory